add DELETE, SWAGGER
